# oxid

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  frontmatter.rs  git.rs  handlers.rs  main.rs  markdown.rs  search.rs  spellcheck.rs  telescope.rs  templates.rs  theme.rs  ui.rs
