[package]
name = "oxid"
version = "0.1.0"
edition = "2021"
authors = ["Oxid Contributors"]
description = "A fast, keyboard-driven note manager TUI for Linux"
license = "GPL-3.0-or-later"
repository = "https://github.com/oxid/oxid"
readme = "README.md"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
nucleo-matcher = "0.3"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tui-textarea = { version = "0.7", features = ["search"] }
pulldown-cmark = "0.9"
regex = "1"
chrono = "0.4"
walkdir = "2"
